--- a/templates/quiz/index.html.twig
+++ b/templates/quiz/index.html.twig
@@ -1,20 +1,15 @@
-{% extends 'base.html.twig' %}
+<h1>Lista quizów</h1>
+{% if quizes %}
+{% for quiz in quizes %}
 
-{% block title %}Hello QuizController!{% endblock %}
-
-{% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>E:/quiz/src/Controller/QuizController.php</code></li>
-        <li>Your template at <code>E:/quiz/templates/quiz/index.html.twig</code></li>
-    </ul>
+<div>
+    <a href="/details/quiz/{{quiz.id}}">
+        <h2>{{quiz.name}}</h2>
+        <p>{{quiz.description}}</p>
+        <a href="/delete/quiz/{{quiz.id}}">Usuń quiz</a>
+        <a href="/update/quiz/{{quiz.id}}">Edytuj quiz</a>
+    </a>
 </div>
-{% endblock %}
+
+{% endfor %}
+{% endif %}
