secured routes and configuerd links to pages

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -1,8 +1,8 @@
 <div>
     <h2>Przeglądaj quizy</h2>
-    <a href='/quizes'>Zobacz!</a>
+    <a href='/quiz'>Zobacz!</a>
 </div>
 <div>
     <h2>Stwórz swój własny quiz</h2>
-    <a href='/create/quiz'>Stwórz!</a>
+    <a href='/quiz/create'>Stwórz!</a>
 </div>
