--- a/templates/quiz/details.html.twig
+++ b/templates/quiz/details.html.twig
@@ -6,7 +6,7 @@
     <h3>{{quiz.name}}</h3>
     <p>{{quiz.description}}</p>
 
-    <a href="/quiz/question/{{quiz.id}}">Przejdź do quizu</a>
+    <a href="/question/{{quiz.id}}">Przejdź do quizu</a>
     
 </div>
 
