added and configuerd tailiwnd, style login,register page

--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -1,39 +1,54 @@
-{% block title %}Log in!{% endblock %}
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('styles/app.css') }}">
+{% endblock %}
 
 {% block body %}
-    <form method="post">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
+<div class="flex justify-center items-center min-h-screen bg-gray-100">
+    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm">
+        <form method="post">
+            {% if error %}
+                <div class="alert alert-danger bg-red-100 text-red-700 border-l-4 border-red-500 p-4 mb-4">
+                    {{ error.messageKey|trans(error.messageData, 'security') }}
+                </div>
+            {% endif %}
 
-        {% if app.user %}
-            <div class="mb-3">
-                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            {% if app.user %}
+                <div class="mb-4 text-sm text-gray-700">
+                    You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}" class="text-blue-500 hover:underline">Logout</a>
+                </div>
+            {% endif %}
+
+            <h1 class="text-2xl font-semibold text-center mb-6">Please sign in</h1>
+
+            <div class="mb-4">
+                <label for="username" class="block text-sm font-medium text-gray-600">Email</label>
+                <input type="email" value="{{ last_username }}" name="_username" id="username" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:outline-none" autocomplete="email" required autofocus>
             </div>
-        {% endif %}
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="email" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
-
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
-
-        {#
-            Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-            See https://symfony.com/doc/current/security/remember_me.html
-
-            <div class="checkbox mb-3">
-                <input type="checkbox" name="_remember_me" id="_remember_me">
-                <label for="_remember_me">Remember me</label>
+            <div class="mb-6">
+                <label for="password" class="block text-sm font-medium text-gray-600">Password</label>
+                <input type="password" name="_password" id="password" class="w-full p-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-400 focus:outline-none" autocomplete="current-password" required>
             </div>
-        #}
 
-        <button class="btn btn-lg btn-primary" type="submit">
-            Sign in
-        </button>
-    </form>
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
+            {#
+                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                See https://symfony.com/doc/current/security/remember_me.html
+            #}
+
+            {#
+                <div class="flex items-center mb-6">
+                    <input type="checkbox" name="_remember_me" id="_remember_me" class="mr-2">
+                    <label for="_remember_me" class="text-sm text-gray-600">Remember me</label>
+                </div>
+            #}
+
+            <button class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400" type="submit">
+                Sign in
+            </button>
+        </form>
+        <p class="text-gray-500">Don't have account? <a href="/register" class="text-blue-500">Sign up!</a></p>
+    </div>
+</div>
 {% endblock %}
